--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,8 +8,8 @@
     <title>MyBookApp</title>
 </head>
 
-<body ng-app="app">
-    <div ng-controller="UsersController" class="header-block">
+<body>
+    <div class="header-block">
         <div class="header-block-left">
             <div class="header-dot dot-close"></div>
             <div class="header-dot dot-extend"></div>
@@ -43,7 +43,7 @@
         <div class="left-block-menu menu-1">
             <ul class="left-block-ul ul-1">
                 <li class="li-line"><div class="left-block-ul-btn"><a class="left-block-li li-a1" href="#"><i class="fa fa-book fa-fw left-block-fa-icons"></i>Now Reading</a></div></li>
-                <li class="li-line"><div class="left-block-ul-btn"><a class="left-block-li li-a1" href="#"><i class="fa fa-globe fa-fw left-block-fa-icons"></i>Browse</a></div></li>
+                <li class="li-line"><div class="left-block-ul-btn" ng-class="{'active': $state.is('browse')}"><a class="left-block-li li-a1" ui-sref="browse"><i class="fa fa-globe fa-fw left-block-fa-icons"></i>Browse</a></div></li>
                 <li class="li-line"><div class="left-block-ul-btn"><a class="left-block-li li-a1" href="#"><i class="fa fa-shopping-cart fa-fw left-block-fa-icons"></i>By Books</a></div></li>
                 <li class="li-line"><div class="left-block-ul-btn"><a class="left-block-li li-a1" href="#"><i class="fa fa-star fa-fw left-block-fa-icons"></i>Favourite Books</a></div></li>
                 <li class="li-line"><div class="left-block-ul-btn"><a class="left-block-li li-a1" href="#"><i class="fa fa-list fa-fw left-block-fa-icons"></i>Wishlist</a></div></li>
@@ -78,38 +78,8 @@
         </div>
     </div>
 
-    <div class="main-table">
-        <div class="main-table table-title">
-            <p class="table-title-p">Browse Available Books</p>
-        </div>
-        <div class="main-table table-menu-bar">
-            <ul class="list-inline table-top-menu">
-                <li class="list-inline-menu-bar"><div class="table-menu-btn-round btn-all-bo"><a class="list-inline-menu-a" href="#" ng-click="newOrder=''">All Books</a></div></li>
-                <li class="list-inline-menu-bar"><div class="table-menu-btn-round btn-most-re"><a class="list-inline-menu-a" href="#" ng-click="newOrder='date'">Most Recent</a></div></li>
-                <li class="list-inline-menu-bar"><div class="table-menu-btn-round btn-most-po"><a class="list-inline-menu-a" href="#" ng-click="newOrder='rating'">Most Popular</a></div></li>
-                <li class="list-inline-menu-bar"><div class="table-menu-btn-round btn-free-bo"><a class="list-inline-menu-a" href="#" ng-click="query='book for free'">Free Books</a></div></li>
-            </ul>
-            <div class="input-search-div">
-                <input ng-model="query" class="input-search-books" type="search" placeholder="Enter Keywords">
-                <i class="fa fa-search fa-fw input-search-fa-icon"></i>
-            </div>
-        </div>
+    <div ui-view class="page"></div>
 
-        <div ng-controller="BooksListController" class="main-book-list">
-                <div ng-repeat="book in booksList() | filter:query | orderBy:newOrder:true" id="book{{book.ID}}" class="book-list">
-                    <span class="checker-false {{bookChecker}}">
-                        <i class="fa fa-check-circle-o"></i>
-                    </span>
-                    <img class="bookCover" ng-src="{{book.cover}}" ng-click="bookChecker ? bookChecker='' : bookChecker='checked-book'">
-                    <a class="book-list-title" href="#">{{book.title}}</a>
-                    <a class="book-list-author" href="#">by {{book.author}} {{bkCount}}</a>
-                    <span class="star-orange">
-                        <i ng-repeat="rating in ((rating = []) && (rating.length=book.rating) && rating) track by $index" class="fa fa-star stars{{$index}}"></i>
-                    </span>
-                </div>
-        </div>
-
-    </div>
     <div class="table-footer">
         <div class="btn-group footer-btn-block">
             <a class="btn footer-help-btn" type="button"><i class="fa fa-question-circle fa-lg icon-center-big"></i></a>
@@ -117,11 +87,15 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="vendor/js/jquery.min.js"></script>
-    <script type="text/javascript" src="vendor/js/bootstrap.min.js"></script>
-    <script src="vendor/js/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-ui-switch/angular-ui-switch.js"></script>
+
     <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="app/browse/browse.controller.js"></script>
 
 </body>
 </html>
